# Build-a-multi-modal-from-scratch

./: README.md  inference.py  notes.txt  pyproject.toml  requirements.txt
src/: gemma_model.py  paligemma_processor.py  vit_model.py
